# Kunjin

./: .gitignore  README.md  pyproject.toml  setup.py
containers/legacy-doc/: Dockerfile  README.md
docs/: phase-1-security-review.md
docs/audits/: 2026-07-12-kunjin-phase-a-independent-review.md  2026-07-12-kunjin-phase-b-independent-review.md  2026-07-12-kunjin-phase-c-independent-review.md  2026-07-13-kunjin-phase-d1-1-a-independent-review.md  2026-07-13-kunjin-phase-d1-1-b-independent-review.md  2026-07-13-kunjin-phase-d1-independent-review.md  2026-07-14-kunjin-phase-d1-1-b-live-acceptance.md  2026-07-14-kunjin-phase-d1-1-c-independent-review.md  2026-07-14-kunjin-phase-d1-1-c-live-acceptance.md  2026-07-14-kunjin-phase-d1-1-overall-live-regression.md  2026-07-16-kunjin-phase0-independent-review.md  2026-07-17-kunjin-phase1-independent-review.md  2026-07-18-kunjin-pragmatic-personal-mvp-review.md  2026-07-19-kunjin-phase3-independent-review.md  2026-07-19-kunjin-phase4-independent-review.md  2026-07-19-kunjin-phase41-independent-review.md
scripts/: build_legacy_doc_converter.sh  install_launchd.py  phase41_acceptance.py  phase5_acceptance.py  run_phase0_acceptance.sh  run_phase1_acceptance.sh  run_phase3_acceptance.sh  run_phase41_acceptance.sh  run_phase4_acceptance.sh  run_phase5_acceptance.sh  run_pragmatic_mvp_acceptance.sh
src/kunjin/: cli.py  fund_candidates.py  fund_review.py  investor_guardrails.py  logging.py  models.py  paths.py  portfolio_review.py  portfolio_snapshot.py  review_triggers.py
tests/: test_smoke.py
tests/integration/: test_cli.py  (+1 more)
(+346 files in other folders)
