[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kunjin"
version = "0.1.0"
description = "Local, read-only fund research foundation for Codex"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
qr = ["qrcode>=7.4,<9"]
dev = ["pytest>=8,<9", "ruff>=0.5,<1"]

[project.scripts]
kunjin = "kunjin.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
